# check_mssql_health

./: .gitignore  .gitmodules  ChangeLog  FORMULA  Makefile.am  README  README.md  TODO  aclocal.m4  check_mssql_health.spec  configure.ac  configure.in
contrib/: delete_user.sql
doc/: Makefile.am  check_mssql_health.de.txt  check_mssql_health.en.txt  job-subsystem-privileges.md  job-subsystem-timezones.md
openspec/changes/fix-failed-jobs-didneverrun/: analysis.md  design.md  join-analysis.md  overdue-jobs.md  proposal.md  real-data.md  summary-of-findings.md  tasks.md
openspec/changes/fix-failed-jobs-didneverrun/specs/: job-subsystem.md
plugins-scripts/: Makefile.am  check_mssql_health.pl
plugins-scripts/CheckMssqlHealth/: APS.pm  ASE.pm  Device.pm  MSSQL.pm  Sybase.pm
plugins-scripts/CheckMssqlHealth/APS/: DBI.pm  SqlRelay.pm  Sqsh.pm
plugins-scripts/CheckMssqlHealth/APS/Component/: AlertSubsystem.pm  ComponentSubsystem.pm  DiskSubsystem.pm
plugins-scripts/CheckMssqlHealth/ASE/: DBI.pm  SqlRelay.pm  Sqsh.pm
plugins-scripts/CheckMssqlHealth/ASE/Component/: DatabaseSubsystem.pm
plugins-scripts/CheckMssqlHealth/MSSQL/: DBI.pm  SqlRelay.pm  Sqsh.pm
plugins-scripts/CheckMssqlHealth/MSSQL/Component/: AvailabilitygroupSubsystem.pm  DatabaseSubsystem.pm  JobSubsystem.pm  MemorypoolSubsystem.pm
plugins-scripts/CheckMssqlHealth/MSSQL/Component/MemorypoolSubsystem/: Buffercache.pm  Lock.pm
plugins-scripts/CheckMssqlHealth/Sybase/: DBI.pm  SqlRelay.pm  Sqsh.pm
plugins-scripts/Classes/: ASE.pm  Device.pm  MSSQL.pm  Sybase.pm
plugins-scripts/Classes/APS/: SqlRelay.pm
plugins-scripts/Classes/APS/Component/: AlertSubsystem.pm  ComponentSubsystem.pm
plugins-scripts/Classes/ASE/: SqlRelay.pm  Sqsh.pm
plugins-scripts/Classes/ASE/Component/: DatabaseSubsystem.pm
plugins-scripts/Classes/MSSQL/: DBI.pm  SqlRelay.pm  Sqsh.pm
plugins-scripts/Classes/MSSQL/Component/: AvailabilitygroupSubsystem.pm  DatabaseSubsystem.pm  JobSubsystem.pm  MemorypoolSubsystem.pm
plugins-scripts/Classes/MSSQL/Component/MemorypoolSubsystem/: Buffercache.pm  Lock.pm
plugins-scripts/Classes/Sybase/: DBI.pm  SqlRelay.pm  Sqsh.pm
plugins-scripts/Nagios/DBD/MSSQL/: Server.pm
plugins-scripts/Nagios/DBD/MSSQL/Server/: Database.pm  Job.pm
t/: 00_source_sanity.t  10_database_live.t  11_job_subsystem.t  12_job_subsystem_live.t  check_mssql_health.t
t/sql/: job_scenarios_cleanup.sql  job_scenarios_setup.sql
